Update fetch all + get detail + update status, profile + delete+ fetch all employee deleted + restore employee